fix broken css markup

--- a/app/assets/stylesheets/unregistered/copyright_supervisions.css.scss
+++ b/app/assets/stylesheets/unregistered/copyright_supervisions.css.scss
@@ -1,7 +1,6 @@
 @import "settings";
 
-
-body.unregistered 
+body.unregistered {
   div.copyright {
     background-image: image-url("design_project_logo_big.jpg") ;
   }
